force-app/Base/main/default/objects/Course_Delivery__c/Course_Delivery__c.object-meta.xml
<CustomObject>
	<description>Used to track each time a course is delivered.</description>
	<label>Course Delivery</label>
	<nameField>
		<displayFormat>DELIVERY-{00000}</displayFormat>
		<label>Course Delivery Number</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Course Deliveries</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>