force-app/Base/main/default/objects/Course_Delivery__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
	<fullName>Attendee_Count__c</fullName>
	<label>Attendee Count</label>
	<summaryFilterItems>
		<field>Course_Attendee__c.Status__c</field>
		<operation>equals</operation>
		<value>Enrolled,Completed</value>
	</summaryFilterItems>
	<summaryForeignKey>Course_Attendee__c.Course_Delivery__c</summaryForeignKey>
	<summaryOperation>count</summaryOperation>
	<type>Summary</type>
</CustomField>