force-app/Base/main/default/objects/Course_Delivery__c/fields/Course__c.field-meta.xml
<CustomField>
	<fullName>Course__c</fullName>
	<description>Course being delivered.</description>
	<label>Course</label>
	<referenceTo>Course__c</referenceTo>
	<relationshipLabel>Course Deliveries</relationshipLabel>
	<relationshipName>Course_Deliveries</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>