force-app/Base/main/default/objects/Course_Delivery__c/fields/Instructor__c.field-meta.xml
<CustomField>
	<fullName>Instructor__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<description>Instructor that will teach a course.</description>
	<label>Instructor</label>
	<lookupFilter>
		<active>true</active>
		<filterItems>
			<field>User.Is_Instructor__c</field>
			<operation>equals</operation>
			<value>True</value>
		</filterItems>
		<isOptional>false</isOptional>
	</lookupFilter>
	<referenceTo>User</referenceTo>
	<relationshipName>Course_Deliveries</relationshipName>
	<type>Lookup</type>
</CustomField>