force-app/Base/main/default/objects/Course_Delivery__c/fields/Location__c.field-meta.xml
<CustomField>
	<fullName>Location__c</fullName>
	<description>City where a course will take place.</description>
	<label>Location</label>
	<type>Picklist</type>
	<valueSet>
		<controllingField>Region__c</controllingField>
		<valueSetDefinition>
			<value>
				<fullName>Tokyo, JP</fullName>
			</value>
			<value>
				<fullName>Singapore, SG</fullName>
			</value>
			<value>
				<fullName>Paris, FR</fullName>
			</value>
			<value>
				<fullName>London, GB</fullName>
			</value>
			<value>
				<fullName>Berlin, DE</fullName>
			</value>
			<value>
				<fullName>San Francisco, US</fullName>
			</value>
			<value>
				<fullName>Chicago, US</fullName>
			</value>
			<value>
				<fullName>Toronto, CA</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>