force-app/Base/main/default/objects/Course_Delivery__c/fields/Region__c.field-meta.xml
<CustomField>
	<fullName>Region__c</fullName>
	<description>Region where course will take place.</description>
	<label>Region</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>APAC</fullName>
			</value>
			<value>
				<fullName>EMEA</fullName>
			</value>
			<value>
				<fullName>NAMER</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>