force-app/Base/main/default/objects/Course_Delivery__c/fields/Start_Date__c.field-meta.xml
<CustomField>
	<fullName>Start_Date__c</fullName>
	<description>Date the course will begin.</description>
	<label>Start Date</label>
	<type>Date</type>
</CustomField>