force-app/Base/main/default/objects/Course_Delivery__c/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<description>Status of the course delivery.</description>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Scheduled</fullName>
			</value>
			<value>
				<fullName>Delivered</fullName>
			</value>
			<value>
				<fullName>Cancelled</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>