force-app/Base/main/default/objects/Course_Delivery__c/listViews/All.listView-meta.xml
<ListView>
	<fullName>All</fullName>
	<columns>NAME</columns>
	<columns>Course__c</columns>
	<columns>Region__c</columns>
	<columns>Location__c</columns>
	<columns>Start_Date__c</columns>
	<columns>Status__c</columns>
	<columns>Instructor__c</columns>
	<filterScope>Everything</filterScope>
	<label>All</label>
</ListView>